--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
 
   <body>
     <%= render partial: "shared/navbar" %>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto mt-28 px-5">
+      <%= render partial: "shared/flash" %>
       <%= yield %>
     </main>
   </body>
