--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,3 @@
-<div class="w-full flex justify-center">
-	<h1 class="text-4xl">Welcome to Scheduled Tweets</h1>
+<div class="w-full flex justify-center flex-col">
+	<h1 class="text-4xl text-center">Welcome to Scheduled Tweets</h1>
 </div>
