Test Git Plus et début omniauth

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,5 @@
 <div class="w-full flex justify-center flex-col">
 	<h1 class="text-4xl text-center">Welcome to Scheduled Tweets</h1>
 </div>
+
+<%= button_to "Connect Twitter", "/auth/twitter", method: :post, class: "flex items-center justify-center ml-5 px-2 py-1 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-2 md:text-m md:px-5" %>
